# LazyCompiler

./: .gitignore  AST.c  AST.h  ASTold.h  IR.txt  SSA.txt  aerr.txt  ain_preproc.txt  aout.txt  aout2.txt  aout2_fixed.txt  aout3.gv  aout_IR.txt  aout_assembly.txt  aout_codegen.txt  aout_parse.txt  aout_semantic.txt  assembly.txt  compile.bat  compile.sh  debug.sh  derp.txt  gdbcmd.txt  gdbinput.txt  gdbinput_linux.txt  globals.h  lazy2.txt  lazy3.txt  lazy_print.txt  lazy_string.txt  lazy_util.txt  lex.yy.c  lexin.l  makefile  run.bat  run.bat~  run.sh  semantic.c  semantic.h  vector.c  (+5 more)
LazyComp/: LazyComp.sln
code/: CMakeLists.txt
code/include/: todo.h
code/include/codegen/: codegen.h  codegen_gen_command.h
code/include/codegen/types/: IR_symbol.h  debugInfoFunc.h  debugInfoVar.h  frame.h  reg.h
code/include/main/: main.h
code/include/preproc/: preprocess.h
code/include/semantic/: AST.h  ast_gen.h  semantic.h  semantic_analyze.h  semantic_expr_op.h
code/include/semantic/template/: asm_template.h
code/include/semantic/types/: ast_node.h  ast_token.h  code_segment.h  file.h  semantic_context_kind.h  symbol.h  symbol_table.h  type_name.h  typecheck.h  types.h  varvalue.h  yylloc.h
code/include/semantic/types/symtypes/: symbol_class.h  symbol_const.h  symbol_function.h  symbol_variable.h
code/include/util/: allocator_override.h  cobject.h  globals.h  stringUtils.h  vector.h  vector2.h  vector3int.h
code/input/: lexin.l  yaccin.y  yaccin.y~
code/source/codegen/: codegen.c  codegen_gen_command.c
code/source/codegen/types/: IR_symbol.c  debugInfoFunc.c  debugInfoVar.c  frame.c  reg.c
code/source/main/: main.c
code/source/preproc/: preprocess.c
code/source/semantic/: AST.c  ast_gen.c  semantic.c  semantic_analyze.c  semantic_expr_op.c
code/source/semantic/template/: asm_template.c
code/source/semantic/types/: ast_node.c  ast_token.c  code_segment.c  file.c  semantic_context_kind.c  symbol.c  symbol_table.c  type_name.c  typecheck.c  types.c  yylloc.c
code/source/util/: allocator_override.c  globals.c  stringUtils.c  vector.c  vector3int.c
(+141 files in other folders)
